# Hopper_Robot_QLeaning

./: .bash_aliases  .bash_history  README.md
.cache/jedi/CPython-38-33/: 593d51111df2a7984c5d14ec09b1fb4e1c5fa86889ca077d5efe8caf989e2ebc-0629554a1199261548a3efcc3e58a3c44516a8d22ea3030f12c5167df935d78f.pkl  593d51111df2a7984c5d14ec09b1fb4e1c5fa86889ca077d5efe8caf989e2ebc-13dc72cd1562f5c393ceb05d708ffe31e868da9550ae3a23a9a307de46a8ffb7.pkl  593d51111df2a7984c5d14ec09b1fb4e1c5fa86889ca077d5efe8caf989e2ebc-182f8a39aaf620c2ce0bf3097afd623c1f17faf7bd29f5736aaee6664bff6127.pkl  593d51111df2a7984c5d14ec09b1fb4e1c5fa86889ca077d5efe8caf989e2ebc-19b9a9948064d1cc886cbc6380aca6ddd76c17576fbf367f241b46d41db5cd80.pkl  593d51111df2a7984c5d14ec09b1fb4e1c5fa86889ca077d5efe8caf989e2ebc-2261dcc443954608a7f115ab62b3180f1c29214c3e29d298f47d078a61d47492.pkl  593d51111df2a7984c5d14ec09b1fb4e1c5fa86889ca077d5efe8caf989e2ebc-24359c0009c31842e032009ce2da2093853ae4432527dab238d2a5c7fed8dbc6.pkl  593d51111df2a7984c5d14ec09b1fb4e1c5fa86889ca077d5efe8caf989e2ebc-43fd6fc476fc7a7214f182fd577df7a4f4879fa04cb03a2e4e2164635e9f6f8c.pkl  (+169 more)
.cache/pylint/: controllers_connection1.stats  gazebo_connection1.stats  interrogate_setup_dot_py.py1.stats  monoped_env1.stats  monoped_state1.stats  qlearn1.stats  start_training_v21.stats
.dbus/session-bus/: 6f2f83165574130697bc7a3f5f3c1fc7-1
.theia/: recentworkspace.json
.theia/plugin-storage/: global-state.json
simulation_ws/src/my_hopper_training/: CMakeLists.txt  package.xml
simulation_ws/src/my_legged_robots_description/: package.xml
(+20 files in other folders)
